FreedomSanboxAntDeploy/src/objects/Cheque_Details__c.object
<CustomObject>
    <description>To represent cheque related details.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cheque Details</relationshipLabel>
        <relationshipName>Cheque_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cheque_Status__c</fullName>
        <label>Cheque Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonoured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installment__c</fullName>
        <label>Installment</label>
        <picklist>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Detail</label>
        <referenceTo>Order_Detail__c</referenceTo>
        <relationshipLabel>Cheque Details</relationshipLabel>
        <relationshipName>Cheque_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cheque Details</label>
    <nameField>
        <displayFormat>CHQ-{000000}</displayFormat>
        <label>Cheque Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheque Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_Received_Greater_than_Balance_Amt</fullName>
        <active>false</active>
        <errorConditionFormula>Amount_Received__c &gt; Order_Detail__r.Balance_Amount__c</errorConditionFormula>
        <errorMessage>Received Amount can not greater than Order Balance Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Details_Not_Null</fullName>
        <active>true</active>
        <description>Order Details Should not be Null</description>
        <errorConditionFormula>ISBLANK(Order_Detail__c)</errorConditionFormula>
        <errorMessage>Order Details should not be Blank.</errorMessage>
    </validationRules>
</CustomObject>